<resources>
    <string name="app_name">Parking</string>
    <string name="action_settings">Settings</string>

    <!-- 高德导航SDK -->
    <string name="app_id">输入您讯飞的appid</string>
    <string name="preference_default_tts_role">xiaoyan</string>
    <string name="preference_key_tts_speed">tts_speed</string>
    <string name="preference_title_tts_speed">语速</string>
    <string name="preference_default_tts_speed">50</string>
    <string name="preference_dialog_title_tts_speed">选择语速</string>
    <string name="preference_key_tts_volume">tts_volume</string>
    <string name="preference_title_tts_volume">音量</string>
    <string name="preference_default_tts_volume">50</string>
    <string name="preference_dialog_title_tts_volume">选择音量</string>
    <string name="preference_key_tts_pitch">tts_pitch</string>
    <string name="preference_title_tts_pitch">语调</string>
    <string name="preference_default_tts_pitch">50</string>
    <string name="intell_bd_title">智能播报</string>

    <!-- Tab Me  -->
    <string name="Me_login">登录/注册</string>
    <string name="Me_CarStatusOn">您的车子在停车场  >>>  点击获取详情</string>
    <string name="Me_CarStatusOFF">您暂时没有车子在停车场</string>
    <string name="Me_Money">我的余额</string>
    <string name="Me_Car">我的车牌</string>
    <string name="Me_Order">我的预约</string>
    <string name="Me_Favorite">我的收藏</string>
    <string name="Me_ParkingLog">停车记录</string>
    <string name="Me_Advice">反馈意见</string>

    <!--Login Activity-->
    <string name="Login_enterUsername_hint">请输入用户名</string>
    <string name="Login_enterPassword_hint">请输入密码</string>
    <string name="Login_enterPassword2_hint">再次确认密码</string>
    <string name="Login_login_btn">登录</string>
    <string name="Login_chanceTosignup_text"><![CDATA[转到注册>>>]]></string>
    <string name="title_activity_my_car">我的车牌</string>
    <string name="title_activity_my_car_add">新增您的车牌</string>
    <string name="title_activity_navi">正在为你导航</string>
    <string name="title_activity_login">登录或注册</string>
    <string name="title_activity_my_moneylog">您的金额记录</string>
    <string name="title_activity_my_advice">意见反馈</string>
    <string name="title_activity_my_parkinglog">停车记录</string>
    <string name="title_activity_my_favorite">已收藏的停车场</string>
    <string name="title_activity_my_order">我的预定</string>
    <string name="title_activity_my_parking_status">我的停车状态</string>


    <!--Teb_Book-->
    <string name="tab_book_bookMarker">预订车场：</string>
    <string name="tab_book_bookDate">预订日期：</string>
    <string name="tab_book_bookTime">预订时间：</string>
    <string name="tab_book_bookBtn">预约</string>
    <string name="title_activity_scan_qrcode">出入库扫码</string>


</resources>
