<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/order"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/tab_book_bookMarker"/>

                <Spinner
                    android:spinnerMode="dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:id="@+id/markerSpinner" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/tab_book_bookDate"/>

                <TextView
                    android:id="@+id/bookDate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:text="2016-05-09"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:text="@string/tab_book_bookTime"/>

                <TextView
                    android:id="@+id/bookTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:text="18:00"/>
            </LinearLayout>

            <Button
                android:id="@+id/bookActionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                style="?android:attr/borderlessButtonStyle"
                android:background="#337ab7"
                android:text="@string/tab_book_bookBtn"/>


        </LinearLayout>
    </ScrollView>




</LinearLayout>
